fixCSS/Alert- GiaDai

--- a/Admin/SalaryCalculate/View/AlertFailed.fxml
+++ b/Admin/SalaryCalculate/View/AlertFailed.fxml
@@ -8,17 +8,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="184.0" prefWidth="415.0" styleClass="dialog" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="182.0" prefWidth="415.0" styleClass="dialog" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
     <header>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="138.0" prefWidth="415.0" stylesheets="@CSS/Salary.css">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="135.0" prefWidth="415.0" stylesheets="@CSS/Salary.css">
             <children>
-                <Label fx:id="alertheader" alignment="CENTER" layoutY="106.0" prefHeight="27.0" prefWidth="415.0" styleClass="AlertSuccess" text="Successful" />
+                <Label fx:id="AlertSQL" alignment="CENTER" layoutY="106.0" prefHeight="27.0" prefWidth="415.0" styleClass="AlertFailed" text="FAILED" />
                 <ImageView fitHeight="79.0" fitWidth="91.0" layoutX="168.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
                     <image>
-                        <Image url="@../../../Icon/ok.png" />
+                        <Image url="@../../../Icon/cancel.png" />
                     </image>
                 </ImageView>
-                <Label fx:id="textSuccess" layoutX="189.0" layoutY="133.0" prefHeight="32.0" prefWidth="55.0" styleClass="textError" />
             </children>
         </AnchorPane>
     </header>
