--- a/Admin/SalaryCalculate/View/AlertSQL.fxml
+++ b/Admin/SalaryCalculate/View/AlertSQL.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="223.0" prefWidth="415.0" styleClass="dialog" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="203.0" prefWidth="415.0" styleClass="dialog" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
     <header>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="169.0" prefWidth="415.0" stylesheets="@CSS/Salary.css">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="156.0" prefWidth="415.0" stylesheets="@CSS/Salary.css">
             <children>
                 <Label alignment="CENTER" prefHeight="27.0" prefWidth="415.0" styleClass="AlertSQL" text="ERROR" />
                 <ImageView fitHeight="79.0" fitWidth="91.0" layoutX="174.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
@@ -18,7 +18,7 @@
                         <Image url="@../../../Icon/alert.png" />
                     </image>
                 </ImageView>
-            <Label layoutX="89.0" layoutY="125.0" prefHeight="32.0" prefWidth="249.0" styleClass="textError"  />
+            <Label id="textError" fx:id="textError" layoutX="89.0" layoutY="125.0" prefHeight="32.0" prefWidth="249.0" styleClass="textAlert" text="Cannot query" />
             </children>
         </AnchorPane>
     </header>
