--- a/Admin/SalaryCalculate/View/Salarytable.fxml
+++ b/Admin/SalaryCalculate/View/Salarytable.fxml
@@ -10,31 +10,35 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="523.0" prefWidth="1109.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Salarytable">
+<AnchorPane prefHeight="540.0" prefWidth="1109.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Salarytable">
     <children>
-        <Button layoutX="25.0" layoutY="80.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
-        <Button layoutX="25.0" layoutY="153.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
-        <Button layoutX="25.0" layoutY="217.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
-        <Button layoutX="31.0" layoutY="520.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc" />
-      <AnchorPane layoutX="169.0" prefHeight="557.0" prefWidth="936.0">
+        <Button layoutX="14.0" layoutY="252.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
+        <Button layoutX="14.0" layoutY="125.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
+        <Button layoutX="14.0" layoutY="187.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
+      <AnchorPane layoutX="154.0" prefHeight="504.0" prefWidth="951.0">
          <children>
-             <Label fx:id="header" alignment="CENTER" layoutY="1.0" prefHeight="42.0" prefWidth="900.0" text="Salary" />
-             <TableView fx:id="employeeTableSalaryView" layoutY="56.0" prefHeight="422.0" prefWidth="900.0">
+             <Label fx:id="header" alignment="CENTER" layoutY="23.0" prefHeight="54.0" prefWidth="885.0" text="SALARY" />
+             <TableView fx:id="employeeTableSalaryView" layoutY="91.0" prefHeight="413.0" prefWidth="885.0">
                <columns>
                       <TableColumn fx:id="employeeTableSLRColumnID" prefWidth="72.66668701171875" text="ID" />
-                      <TableColumn fx:id="employeeTableSLRColumnName" prefWidth="193.3333740234375" text="Name" />
-                      <TableColumn fx:id="employeeTableSLRColumnPosition" prefWidth="78.0" text="Position" />
-                      <TableColumn fx:id="employeeTableSLRColumnType" prefWidth="73.33331298828125" text="Type" />
-                      <TableColumn fx:id="employeeTableSLRColumnSalaryPerHour" prefWidth="110.33331298828125" text="SalaryOfTime" />
+                      <TableColumn fx:id="employeeTableSLRColumnName" prefWidth="172.66668701171875" text="Name" />
+                      <TableColumn fx:id="employeeTableSLRColumnPosition" prefWidth="93.33331298828125" text="Position" />
+                      <TableColumn fx:id="employeeTableSLRColumnType" prefWidth="83.33331298828125" text="Type" />
+                      <TableColumn fx:id="employeeTableSLRColumnSalaryPerHour" prefWidth="109.66668701171875" text="SalaryOfTime" />
                       <TableColumn fx:id="employeeTableSLRColumnDate" prefWidth="106.3333740234375" text="WorkingDate" />
-                      <TableColumn fx:id="employeeTableSLRColumnHour" prefWidth="92.6666259765625" text="WorkingHour" />
-                      <TableColumn fx:id="employeeTableSLRColumnSalary" prefWidth="170.666748046875" text="Salary" />
+                      <TableColumn fx:id="employeeTableSLRColumnHour" prefWidth="113.66668701171875" text="WorkingHour" />
+                      <TableColumn fx:id="employeeTableSLRColumnSalary" prefWidth="150.33331298828125" text="Salary" />
                </columns>
             </TableView>
-            <ComboBox fx:id="ComboBoxMonth" layoutX="735.0" layoutY="10.0" onAction="#changeMonth" prefWidth="150.0" promptText="Chosse Month" />
+            <ComboBox fx:id="ComboBoxMonth" layoutX="727.0" layoutY="32.0" onAction="#changeMonth" prefWidth="150.0" promptText="Choose month" />
+              <ImageView fitHeight="65.0" fitWidth="62.0" layoutX="-38.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
+                  <image>
+                      <Image url="@../../../Icon/salary.png" />
+                  </image>
+              </ImageView>
          </children>
       </AnchorPane>
-       <Button layoutX="52.0" layoutY="424.0" mnemonicParsing="false" onAction="#GoBack" styleClass="button-admin">
+       <Button layoutX="58.0" layoutY="435.0" mnemonicParsing="false" onAction="#GoBack" styleClass="button-admin">
            <graphic>
                <ImageView fitHeight="46.0" fitWidth="49.0" layoutX="-27.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-admin">
                    <image>
