--- a/Admin/SalaryCalculate/View/EditSalary.fxml
+++ b/Admin/SalaryCalculate/View/EditSalary.fxml
@@ -13,10 +13,10 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="272.0" prefWidth="500.0" stylesheets="">
             <children>
                 <Label fx:id="header" alignment="CENTER" prefHeight="24.0" prefWidth="500.0" styleClass="header" text="Edit Position" />
-                <ComboBox fx:id="TypeList" layoutX="168.0" layoutY="118.0" prefHeight="36.0" prefWidth="229.0" promptText="Select Position" styleClass="TextFieldInput" />
+                <ComboBox fx:id="PositionList" layoutX="168.0" layoutY="118.0" prefHeight="36.0" prefWidth="229.0" promptText="Select Position" styleClass="TextFieldInput" />
                 <Label layoutX="48.0" layoutY="113.0" prefHeight="47.0" prefWidth="107.0" styleClass="LabelTilte" text="Position: " />
                 <Label layoutX="48.0" layoutY="58.0" prefHeight="47.0" prefWidth="107.0" styleClass="LabelTilte" text="Type:" />
-                <ComboBox fx:id="PositionList" layoutX="168.0" layoutY="64.0" prefHeight="36.0" prefWidth="229.0" promptText="Select Type" styleClass="TextFieldInput" />
+                <ComboBox fx:id="TypeList" layoutX="168.0" layoutY="64.0" prefHeight="36.0" prefWidth="229.0" promptText="Select Type" styleClass="TextFieldInput" />
                 <Label layoutX="48.0" layoutY="160.0" prefHeight="47.0" prefWidth="107.0" styleClass="LabelTilte" text="SalaryPerHour:" />
                 <TextField fx:id="SalartyPerHour" layoutX="176.0" layoutY="171.0" prefHeight="32.0" prefWidth="215.0" />
             </children>
