Huyen fix bug 100% excel and plus quanity

--- a/Admin/DataManager/View/Admin.fxml
+++ b/Admin/DataManager/View/Admin.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
+<AnchorPane prefHeight="449.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminController">
    <children>
       <Label id="header" prefHeight="30.0" prefWidth="671.0" text="Coffe Manage" />
        <Button contentDisplay="TOP" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" stylesheets="@Css/AdminApplication.css" text="Employee" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
@@ -65,7 +65,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button contentDisplay="TOP" layoutX="63.0" layoutY="251.0" mnemonicParsing="false" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Material" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
+      <Button contentDisplay="TOP" layoutX="63.0" layoutY="251.0" mnemonicParsing="false" onAction="#changeSceneWareHouse" prefHeight="123.0" prefWidth="101.0" styleClass="button-icon" text="Material" textAlignment="CENTER" textOverrun="LEADING_ELLIPSIS">
          <graphic>
             <ImageView fitHeight="82.0" fitWidth="102.0" layoutX="178.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
                <image>
