--- a/Admin/IngredientsManager/View/DeleteItemView.fxml
+++ b/Admin/IngredientsManager/View/DeleteItemView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -7,7 +8,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import java.net.URL?>
 <AnchorPane prefHeight="311.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.DeleteItemController">
    <children>
       <Label layoutY="-1.0" prefHeight="31.0" prefWidth="430.0" styleClass="header" text="Delete" />
@@ -18,7 +18,7 @@
       </ImageView>
       <Label layoutX="160.0" layoutY="178.0" prefHeight="35.0" prefWidth="123.0" styleClass="LabelTitleDelete" text="Are you sure?" />
       <Label layoutX="76.0" layoutY="213.0" prefHeight="27.0" prefWidth="289.0" styleClass="LabelTitleDelete2" text="You will not be able to recover this file!" />
-      <Button layoutX="253.0" layoutY="272.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="74.0" styleClass="btn-confirm" text="No">
+      <Button layoutX="253.0" layoutY="272.0" mnemonicParsing="false" onAction="#doNotRemove" prefHeight="27.0" prefWidth="74.0" styleClass="btn-confirm" text="No">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
