--- a/Admin/IngredientsManager/View/RecipeView.fxml
+++ b/Admin/IngredientsManager/View/RecipeView.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,7 +16,7 @@
 
 <AnchorPane prefHeight="640.0" prefWidth="1043.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.RecipeController">
    <children>
-      <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="1041.0" text="Warehouse Management" textAlignment="CENTER" />
+      <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="1041.0" text="Recipe Management" textAlignment="CENTER" />
       <TableView fx:id="table" layoutX="16.0" layoutY="104.0" prefHeight="468.0" prefWidth="1012.0">
          <columns>
             <TableColumn fx:id="productIdCol" prefWidth="99.1408863067627" text="Product ID" />
@@ -77,16 +78,13 @@
       </Button>
       <Button fx:id="backAdminBtn" layoutX="3.0" layoutY="488.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin" />
       <ComboBox fx:id="comboBoxProductName" layoutX="27.0" layoutY="45.0" onAction="#displayChosenItem" prefHeight="41.0" prefWidth="322.0" promptText="Choose Product" />
-      <Label layoutX="783.0" layoutY="55.0" prefHeight="21.0" prefWidth="83.0" text="Thành phẩm:">
+      <Label layoutX="698.0" layoutY="54.0" prefHeight="21.0" prefWidth="83.0" text="Thành phẩm:">
          <font>
             <Font size="15.0" />
          </font>
       </Label>
-      <Label fx:id="result" layoutX="873.0" layoutY="56.0" prefHeight="21.0" prefWidth="156.0">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
+      <TextField fx:id="result" layoutX="790.0" layoutY="52.0" prefHeight="26.0" prefWidth="153.0" promptText="Result" styleClass="txt-field-input" />
+      <Button layoutX="955.0" layoutY="52.0" mnemonicParsing="false" onAction="#saveResult" styleClass="btn-confirm" text="Save Reult" />
    </children>
    <cursor>
       <Cursor fx:constant="HAND" />
